--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="sign_in">Sign in</string>
     <string name="sign_up">Sign up</string>
     <string name="logout">Logout</string>
+    <string name="cancel">Cancel</string>
     <string name="enter">Enter</string>
     <string name="error_empty_registration_form">No login or password entered</string>
     <string name="error_registration">Registration failed, try later</string>
