--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,11 @@
     <string name="clear">Clear</string>
     <string name="sign_in">Sign in</string>
     <string name="sign_up">Sign up</string>
+    <string name="are_you_sure">Are you sure?</string>
     <string name="logout">Logout</string>
     <string name="cancel">Cancel</string>
     <string name="enter">Enter</string>
     <string name="error_empty_registration_form">No login or password entered</string>
+    <string name="error_confirm_password">Сonfirm the password</string>
     <string name="error_registration">Registration failed, try later</string>
 </resources>
