--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -32,4 +32,6 @@
     <string name="cancel">Отмена</string>
     <string name="are_you_sure">Вы уверены?</string>
     <string name="error_confirm_password">Подтвердите пароль</string>
+    <string name="choose_avatar">Выберите аватар</string>
+    <string name="image_error">Изображение отсутствует</string>
 </resources>
